styles/base.css
*{
    margin: 2px;

}

main{
    
     display: flex; 
  flex-flow: column wrap;
  justify-content: space-between; 
  align-items: center; 
  padding: 20px;
  background-color: #eaeaea;

}
.main-header{
    color: rgb(255, 255, 255);
    background-color: #1F2937;
    margin: 20px;
    padding: 20px;
    border: 2px dashed #ffffff;

}






section{
  display: flex; 
  flex-flow: row wrap;
 padding: 68px;
  font-size: 44px;
  font-weight: bold;
  margin-bottom: 10px;
  font-family: "Dancing Script", cursive;

}


.Le-Fishe-Au-Chocolat img,
.la-rotation-du-le-fishe img,
.le-Fishe-du-métro img,
.le-fishe-philosophe img {
              
    border: 7px dashed #1F2937;         
    margin: 20px;                       
    padding: 20px;                      
    box-sizing: border-box;            
}


.Le-Fishe-Au-Chocolat p,
.la-rotation-du-le-fishe p ,
.le-Fishe-du-métro p ,
.le-fishe-philosophe p {
 background-color: #1F2937;
 color: antiquewhite;
 display: flex;
 margin: 20px;
 padding: 20spx;
 justify-content: center;
   border: 2px dashed #ffffff;


}




blockquote {
  font-size: 100px;
 
  background-size: cover;
  margin: auto;     
  padding: 180px; 
  
}
.quotes{
          font-family: "Lobster", sans-serif;
color: #eaeaea;
    display: flex;
    align-content: center;
    align-self: center;
     background-color: #1F2937;  
 border: 12px;
 margin: 12px;
}
.qfish{
      font-family: "Lobster", sans-serif;
    font-style:italic;
    font-size: 43px;
}


.call-to-action {
    font-size: 50px;
  color: rgb(255, 255, 255);
  background-color: #3882f6;
  border-radius: 8px;
  height: 183.4px;
  width: 1246.8px;
  display: flex;
  flex-flow: column wrap;
  align-content: center;
  font-family: "Lobster", sans-serif;
  margin: 129px;
  padding: 9.2px;
}
.call-to-action p {
 margin: 14px;
}

.call-to-action-button {
    font-family: "Lobster", sans-serif;
  font-size: 22px;
  background-color: #3882f6;
  border-radius: 8px;
  color: rgb(255, 255, 255);
  border: solid white;
  height: 39.4px;
  width: 175.4px;
  margin-left: 492.0px;
  margin-top: 74.2px;
}

.call-to-action-button:hover {
    border: 2px dashed white;
  background-color:     #1F2937;  
}
.button-top:hover {
  border: 2px dashed white;
  background-color: #607aad;
  

  color: white;
  transform: translateY(-1px); 
}

